<?xml version="1.0"?>
<package format="2">
  <name>waypoints_logger</name>
  <version>0.0.0</version>
  <description>ROS 2 package for logging waypoints and saving to a CSV file</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>tf-transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

